--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,6 +3,7 @@ spring:
   thymeleaf:
     cache: false
     mode: HTML5
+
   datasource:
     username: root
     password: root
@@ -10,8 +11,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
 
-    #Spring Boot 默认是不注入这些属性值的，需要自己绑定
-    #druid 数据源专有配置
+    #spring鐨刣ruid閰嶇疆
     initialSize: 1
     minIdle: 1
     maxActive: 2
@@ -24,13 +24,18 @@ spring:
     testOnReturn: false
     poolPreparedStatements: true
 
-    #配置监控统计拦截的filters，stat:监控统计、log4j：日志记录、wall：防御sql注入
-    #如果允许时报错  java.lang.ClassNotFoundException: org.apache.log4j.Priority
-    #则导入 log4j 依赖即可，Maven 地址：https://mvnrepository.com/artifact/log4j/log4j
+
     filters: stat,wall,log4j
     maxPoolPreparedStatementPerConnectionSize: 20
     useGlobalDataSourceStat: true
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+
+
+  redis:
+    host: 182.92.169.128
+    port: 6379
+    password: 123456
+
 
 mybatis:
   type-aliases-package: com.hwm.domain
@@ -38,6 +43,6 @@ mybatis:
     map-underscore-to-camel-case: true
     default-fetch-size: 100
     default-statement-timeout: 3000
-  mapper-locations: classpath:mybatis/mapper/*.xml
+  mapper-locations: classpath:dao/*.xml
 
 
